misalignment fixed

--- a/style.css
+++ b/style.css
@@ -19,6 +19,11 @@ header{
   z-index: 99;
   background: linear-gradient(45deg, #3a8bc8, #104698);
 }
+
+header h2 {
+  margin: 0;
+  padding: 0;
+}
 /*
 .h2 {
   font-family: 'Poppins', sans-serif;
